--- a/TableViewTest/Base.lproj/Main.storyboard
+++ b/TableViewTest/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zHp-9R-JuG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zHp-9R-JuG">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -58,7 +58,7 @@
                                 <rect key="frame" x="120" y="575" width="150" height="30"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <state key="normal" title="S'enregistrer">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <color key="titleShadowColor" red="1" green="0.25002788660000003" blue="0.11434074079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
@@ -83,7 +83,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="bRv-3m-Sbr"/>
                     </view>
-                    <navigationItem key="navigationItem" id="eg0-oU-yQE"/>
+                    <navigationItem key="navigationItem" id="eg0-oU-yQE">
+                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="tDI-Up-fQP">
+                            <connections>
+                                <action selector="editButton:" destination="2mF-Qe-Yn9" id="JJ2-1W-AdH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="ageLabel" destination="off-WD-v9O" id="xid-Hp-ook"/>
                         <outlet property="nameTableView" destination="PVH-YU-Hdt" id="tqM-gO-ZlY"/>
@@ -143,7 +149,8 @@
                                 <rect key="frame" x="120" y="575" width="150" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                                 <state key="normal" title="S'enregistrer">
-                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
                                     <action selector="testButton:" destination="7vC-3P-b5a" eventType="touchUpInside" id="QGC-WP-8vF"/>
@@ -168,15 +175,15 @@
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="wMh-jj-XbC"/>
                                     <barButtonItem title="Rouge" id="ncb-3c-Gl7">
-                                        <color key="tintColor" red="1" green="0.25002788660000003" blue="0.11434074079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" red="0.75732674870466321" green="0.037899318265091547" blue="0.031973687247469663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="changeRedColor:" destination="7vC-3P-b5a" id="FV5-vp-ZoS"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem title="Vert" id="ZPS-ji-Hzi">
-                                        <color key="tintColor" red="0.17486282345876747" green="1" blue="0.13468249273807142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <barButtonItem title="Bleu" id="ZPS-ji-Hzi">
+                                        <color key="tintColor" red="0.061521483522955146" green="0.22397238259923866" blue="0.80286593264248707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <action selector="ChangeGreenColor:" destination="7vC-3P-b5a" id="1ej-JW-bW1"/>
+                                            <action selector="ChangeBlueColor:" destination="7vC-3P-b5a" id="8cx-qJ-Gb8"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
